[AF] Updates the save CC prompt message on mobile

Updates the prompt message on mobile to take into account the
AutofillUpstreamUpdatePromptExplanation experiment similar to Desktop

Bug: 844472
Change-Id: I24bbabbb1af5f1d559196b6dccca5e600aff13ad
Reviewed-on: https://chromium-review.googlesource.com/1066212
Reviewed-by: Mathieu Perreault <mathp@chromium.org>
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Cr-Commit-Position: refs/heads/master@{#559933}