components/autofill/core/browser/autofill_save_card_infobar_delegate_mobile.cc
@@ -9,6 +9,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 #include "base/strings/utf_string_conversions.h"
 #include "base/values.h"
+#include "components/autofill/core/browser/autofill_experiments.h"
 #include "components/autofill/core/browser/credit_card.h"
 #include "components/autofill/core/browser/legal_message_line.h"
 #include "components/autofill/core/common/autofill_constants.h"
@@ -96,8 +97,11 @@ base::string16 AutofillSaveCardInfoBarDelegateMobile::GetTitleText() const {
 
 base::string16 AutofillSaveCardInfoBarDelegateMobile::GetDescriptionText()
     const {
-  return l10n_util::GetStringUTF16(
-      IDS_AUTOFILL_SAVE_CARD_PROMPT_UPLOAD_EXPLANATION_V2);
+  return IsAutofillUpstreamUpdatePromptExplanationExperimentEnabled()
+             ? l10n_util::GetStringUTF16(
+                   IDS_AUTOFILL_SAVE_CARD_PROMPT_UPLOAD_EXPLANATION_V3)
+             : l10n_util::GetStringUTF16(
+                   IDS_AUTOFILL_SAVE_CARD_PROMPT_UPLOAD_EXPLANATION_V2);
 }
 
 int AutofillSaveCardInfoBarDelegateMobile::GetIconId() const {
